Made the upper sidebar work. Hurray!
- The Controls folder is now part of the solution structure, which will store the UserControls.
- ServerPropertiesControl has been created. This is the upper row of the sidebar, which handles the server.properties file.
- JavaArgumentsControl has been created. This is the bottom row of the sidebar, which handles the user_jvm_args.txt file.
- MainWindow.xaml now has a local connection to ServerPropertiesControl.
- spServerPropertiesPanel has replaced the placeholder sidebar. It is a stackpanel, and has visibility set to collapsed by default.
- Added the first comboboxes and items to ServerPropertiesControl, including its (as of yet useless) primary function that all comboboxes will share, ServerPropertyChanged.
- Added a small test function to txtModpackFolderPath_TextChanged to make the server properties sidebar visible when there's an existing Forge installation.

--- a/MinecraftServerTool/MainWindow.xaml
+++ b/MinecraftServerTool/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:local="clr-namespace:MinecraftServerTool.Controls"
         mc:Ignorable="d"
         Title="Minecraft Server Tool" Height="450" Width="800"
         Loaded="Window_Loaded">
@@ -71,10 +72,7 @@
             </Grid.RowDefinitions>
 
             <!-- Server Properties Sidebar -->
-            <Border Grid.Row="0" Background="LightBlue">
-                <TextBlock Text="Server Properties Section" 
-                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            </Border>
+            <local:ServerPropertiesControl Grid.Column="1" Visibility="Collapsed" x:Name="spServerPropertiesPanel"/>
 
             <!-- Java Arguments -->
             <Border Grid.Row="1" Background="LightCoral">
