--- a/MinecraftServerTool/Controls/ServerPropertiesControl.xaml
+++ b/MinecraftServerTool/Controls/ServerPropertiesControl.xaml
@@ -4,10 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MinecraftServerTool.Controls" 
+             xmlns:helpers="clr-namespace:MinecraftServerTool.Helpers"
              xmlns:resources="clr-namespace:MinecraftServerTool.Resources"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="Gray">
+    <UserControl.Resources>
+        <helpers:BoolToEnabledDisabledConverter x:Key="BoolToEnabledDisabledConverter"/>
+    </UserControl.Resources>
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
@@ -16,14 +20,14 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.AllowFlight}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding AllowFlight, Mode=TwoWay}"
+                          SelectedValue="{Binding AllowFlight, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding Booleans}"/>
 
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Allow Nether:" FontWeight="Bold" Margin="5 5 0 5"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding AllowNether, Mode=TwoWay}"
+                          SelectedValue="{Binding AllowNether, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding Booleans}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -31,7 +35,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.CommandBlocks}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding CommandBlocks, Mode=TwoWay}"
+                          SelectedValue="{Binding CommandBlocks, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding Booleans}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -39,7 +43,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.Difficulty}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding Difficulty, Mode=TwoWay}"
+                          SelectedValue="{Binding Difficulty, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding Difficulties}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -47,7 +51,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.Hardcore}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding Hardcore, Mode=TwoWay}"
+                          SelectedValue="{Binding Hardcore, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding Booleans}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -55,7 +59,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.Pvp}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0" 
-                          SelectedValue="{Binding Pvp, Mode=TwoWay}" 
+                          SelectedValue="{Binding Pvp, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}" 
                           ItemsSource="{Binding Booleans}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -69,7 +73,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.OnlineMode}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding OnlineMode, Mode=TwoWay}"
+                          SelectedValue="{Binding OnlineMode, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding Booleans}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -77,7 +81,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.NetworkCompressionTreshold}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding NetworkCompression, Mode=TwoWay}"
+                          SelectedValue="{Binding NetworkCompression, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
                           ItemsSource="{Binding CompressionOptions}"/>
 
                 <StackPanel Orientation="Horizontal">
