Make ServerPropertiesControl's comboboxes populate with the actual properties from server.properties.
- Added more converters to Converters.cs
- Created Services folder
- Added ServerPropertiesService to Services
- Added methods to parse and save information from server.properties.
- Added calls to parse and save server.properties in MainWindow's event handlers.

P.S. Making this work was such a fucking pain in the ass. At the moment only the most important fields from server.properties are in the sidebar panel, but in the future i should be able to add an advanced server properties window that handles all the fields inside server.properties.

--- a/MinecraftServerTool/Controls/ServerPropertiesControl.xaml
+++ b/MinecraftServerTool/Controls/ServerPropertiesControl.xaml
@@ -11,6 +11,9 @@
              Background="Gray">
     <UserControl.Resources>
         <helpers:BoolToEnabledDisabledConverter x:Key="BoolToEnabledDisabledConverter"/>
+        <helpers:DifficultyConverter x:Key="DifficultyConverter"/>
+        <helpers:CompressionConverter x:Key="CompressionConverter"/>
+        <helpers:SeedConverter x:Key="SeedConverter"/>
     </UserControl.Resources>
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
@@ -43,7 +46,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.Difficulty}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding Difficulty, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
+                          SelectedValue="{Binding Difficulty, Mode=TwoWay, Converter={StaticResource DifficultyConverter}}"
                           ItemsSource="{Binding Difficulties}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -81,7 +84,7 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.NetworkCompressionTreshold}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <ComboBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                          SelectedValue="{Binding NetworkCompression, Mode=TwoWay, Converter={StaticResource BoolToEnabledDisabledConverter}}"
+                          SelectedValue="{Binding NetworkCompression, Mode=TwoWay, Converter={StaticResource CompressionConverter}}"
                           ItemsSource="{Binding CompressionOptions}"/>
 
                 <StackPanel Orientation="Horizontal">
@@ -103,7 +106,8 @@
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.LevelSeed}" Margin="5,0,0,0"/>
                 </StackPanel>
                 <TextBox Width="120" HorizontalAlignment="Left" Margin="20 0 0 0"
-                         Text="{Binding LevelSeed, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                         Text="{Binding LevelSeed, Mode=TwoWay, Converter={StaticResource SeedConverter},
+                    UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
