--- a/MinecraftServerTool/MainWindow.xaml
+++ b/MinecraftServerTool/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:local="clr-namespace:MinecraftServerTool.Controls"
         mc:Ignorable="d"
-        Title="Minecraft Server Tool" Height="450" Width="800"
+        Title="OrchestraMC" Height="450" Width="800"
         Loaded="Window_Loaded">
 
     <Grid>
@@ -46,8 +46,8 @@
             <!-- Hosting Selection -->
             <TextBlock Text="Hosting Method:" FontWeight="Bold" Margin="10 20 0 10"/>
             <StackPanel Orientation="Horizontal">
-                <RadioButton x:Name="rbPlayit" Content="Playit.gg" Margin="10 0 0 0"/>
-                <RadioButton x:Name="rbNgrok" Content="Ngrok" Margin="20 0 0 0"/>
+                <RadioButton x:Name="rbPlayit" Content="Playit.gg" Margin="20 0 0 0"/>
+                <RadioButton x:Name="rbNgrok" Content="Ngrok" Margin="10 0 0 0"/>
                 <RadioButton x:Name="rbPortForward" Content="Port Forwarding" Margin="10 0 0 0"/>
             </StackPanel>
 
