--- a/MinecraftServerTool/Controls/Sidebars/ServerPropertiesControl.xaml
+++ b/MinecraftServerTool/Controls/Sidebars/ServerPropertiesControl.xaml
@@ -7,7 +7,7 @@
              xmlns:helpers="clr-namespace:MinecraftServerTool.Helpers"
              xmlns:resources="clr-namespace:MinecraftServerTool.Resources"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="450" d:DesignWidth="180"
              Background="Gray">
     <UserControl.Resources>
         <helpers:BoolToEnabledDisabledConverter x:Key="BoolToEnabledDisabledConverter"/>
@@ -18,6 +18,11 @@
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Content="Save" Margin="0 10 10 0" Padding="3" Width="80" 
+                            Command="{Binding SaveCommand}"/>
+                </StackPanel>
+
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Allow Flight:" FontWeight="Bold" Margin="5 5 0 5"/>
                     <local:TooltipButton TooltipText="{x:Static resources:Tooltips.AllowFlight}" Margin="5,0,0,0"/>
