--- a/MinecraftServerTool/Controls/Sidebars/JavaArgumentsControl.xaml
+++ b/MinecraftServerTool/Controls/Sidebars/JavaArgumentsControl.xaml
@@ -5,11 +5,24 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MinecraftServerTool.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="180"
+             Background="Gray">
     <Grid>
-        <Border Grid.Row="1" Background="LightCoral">
-            <TextBlock Text="Java Arguments" 
-                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Border>
+        <StackPanel Margin="10">
+            <TextBlock Text="Allocate RAM (GB)" FontWeight="Bold" Margin="0,0,0,5"/>
+
+            <!-- Slider and Textbox -->
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <Slider Minimum="1" Maximum="16" Width="150"
+                    Value="{Binding AllocatedRam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Width="50" Margin="10,0,0,0"
+                     Text="{Binding AllocatedRam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
+
+            <!-- Save button -->
+            <Button Content="Save Arguments"
+                Margin="0,10,0,0"
+                Command="{Binding SaveCommand}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
