Refactor code for debugging.
- Create a commandprompt output textbox
- Modify PSI to include a dispatcher and redirect the output data to the output textbox

--- a/MinecraftServerTool/MainWindow.xaml
+++ b/MinecraftServerTool/MainWindow.xaml
@@ -67,6 +67,17 @@
             <TextBlock Text="Server Address:" FontWeight="Bold" Margin="10 20 0 0"/>
             <Button x:Name="btnServerAddress" Content="N/A" Click="btnServerAddress_Click"
                     Width="100" HorizontalAlignment="Left" Margin="20 0 0 0"/>
+            
+            <!-- Debug output log -->
+            <TextBox x:Name="txtDebugOutput"
+             Background="Black"
+             Foreground="LightGreen"
+             FontFamily="Consolas"
+             FontSize="12"
+             IsReadOnly="True"
+             TextWrapping="Wrap"
+             VerticalScrollBarVisibility="Auto"
+             HorizontalScrollBarVisibility="Auto"/>
         </StackPanel>
 
         <!-- RIGHT COLUMN: Sidebars -->
